# crypto_analysis

./: .gitignore  ADDITIONAL_ALPHAS_README.md  COMPREHENSIVE_RESULTS_ANALYSIS.md  Dockerfile  ENHANCED_ALPHAS_README.md  EXTENDED_ALPHA_RESEARCH.md  FACTOR_ANALYSIS_SUMMARY.md  Jenkinsfile  Makefile  additional_alpha_factors.py  binance_data_download.py  bitget_data_download.py  ccxt_data_download.py  crypto_data_analysis_new.py  crypto_data_analysis_new_backup.py  crypto_data_analysis_old.py  crypto_strategy.py  daily_alpha_signals.py  pyproject.toml  run_pipeline.py  test_alphalens.py
data/: knowledge_mathjax.html  temp.md  temp.py
src/crypto_analysis/: crypto_data_analysis_new.py  crypto_data_analysis_new_backup.py  crypto_data_download.py  crypto_strategy.py  daily_alpha_signals.py  enhanced_crypto_analysis.py  extended_alpha_factors.py  fix_floats.py  post_operationa_analysis.py  run_pipeline.py
